# talkplay-tools

./: .gitignore  README.md  app.py  pyproject.toml  run.py
demo/static/: results.json
tpa/agents/: __init__.py  agent_class.py  agent_utils.py  model.py
tpa/agents/system_prompts/: goal_tool_calling.txt  personalization.txt  roleplay.txt
tpa/environments/: __init__.py
tpa/environments/db_item/: __init__.py  db_music.py
tpa/environments/db_user/: __init__.py  user_profile.py
tpa/environments/tools/: __init__.py  bm25.py  embedding_sim.py  executor.py  semantic_id.py  sql.py  utils.py
tpa/environments/tools/models/: cf.py  clap.py  qwen3_embedding.py  siglip2.py
